feat: added more work into the refactoring
