# packages/api-platform/src/framework/cli/command/list/routes/next/collect-api-route-files.ts
@@ -1,7 +1,7 @@
 import { statSync } from "node:fs";
 import { join } from "node:path";
 
-// eslint-disable-next-line import/no-extraneous-dependencies
+ 
 import { collect } from "@visulima/readdir";
 
 import { ALLOWED_EXTENSIONS } from "../../utils";
