# packages/api-platform/src/framework/cli/command/list/routes/routes-render.ts
@@ -1,4 +1,4 @@
-// eslint-disable-next-line import/no-extraneous-dependencies
+ 
 import chalk from "chalk";
 
 import type { Route } from "./types";
